--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
-<!DOCTYPE>
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <title>VueJS Course</title>
   <link rel="stylesheet" type="text/css" href="main.css" />
