Refactor HTML structure and add v-cloak directive for app element

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
   <div id="app" v-cloak>
-{{ message }}
+<p>{{ message }}</p>
   </div>
 
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
