refactor: Update HTML structure and add v-cloak directive for app element

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 
   <body>
     <div id="app" v-cloak>
-      <p>{{ message }}</p>
+      <div>
+        <p>{{ message }}</p>
+      </div>
     </div>
 
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
