--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     </div>
 
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <script src="app.js"></script>
+    <script src="app.js" type="module"></script>
+    <script src="script.js" type="module"></script>
+    <script src="script2.js" type="module"></script>
   </body>
 </html>
