--- a/index.html
+++ b/index.html
@@ -6,13 +6,11 @@
   </head>
 
   <body>
-    <div id="app" v-cloak>
-
-    </div>
+    <div id="app" v-cloak></div>
 
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="app.js" type="module"></script>
-    <script src="script.js" type="module"></script>
-    <script src="script2.js" type="module"></script>
+    <script src="script.mjs" type="module"></script>
+    <script src="script2.mjs" type="module"></script>
   </body>
 </html>
