--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <script src="app.js" type="module"></script>
     <script src="script.mjs" type="module"></script>
     <script src="script2.mjs" type="module"></script>
+    <script src="script.js" type="module"></script>
+    <script src="script2.js" type="module"></script>
   </body>
 </html>
